Agrega Interfaz Beer y template del componente beer-list

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+footer{
+    display: flex;
+    color: white;
+    background: black;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
