--- a/src/app/beer-list/beer-list.component.html
+++ b/src/app/beer-list/beer-list.component.html
@@ -1,20 +1,26 @@
-<table class="table">
+<table class="table text-center">
     <thead>
         <tr>
+            <th>Imagen</th>
             <th>Nombre</th>
             <th>Tipo</th>
             <th>Precio</th>
             <th>Stock</th>
-            <th>Imagen</th>
+            <th>Compra</th>
         </tr>
     </thead>
     <tbody>
         <tr [ngClass]="{'clearance' : beer.clearance}" *ngFor="let beer of beers">
+            <td><img width="90px" height="90px" [src]="beer.image" [alt]="beer.name"><td></td>
             <td>{{beer.name}}</td>
             <td>{{beer.type}}</td>
             <td>{{beer.price  | currency}}</td>
             <td><span class="badge text-bg-danger" *ngIf="beer.stock == 0">Sin Stock</span></td>
-            <td><img width="90px" height="90px" [src]="beer.image" [alt]="beer.name"><td>
+            <td><span>
+                <button class="btn btn-secondary btn-sm" (click)="downQuantity(beer)">-</button>
+                <input type="text" [(ngModel)]="beer.quantity">
+
+                <button class="btn btn-secondary btn-sm" (click)="upQuantity(beer)">+</button></span></td>
         </tr>
        
     </tbody>
